# valuetypes

./: .clang-format  CMakeLists.txt  LICENSE  README.md  ValuetypesConfig.cmake
app/: CMakeLists.txt  main.cc  main.cpp
examples/: CMakeLists.txt  example.cc
integration_test/: CMakeLists.txt  basic_types.cpp  basic_types.json  optionals.cpp  optionals.json  point.cc  point.cpp  point.json  point.yaml  structs.cpp  structs.json  variants.cpp  variants.json  vectors.cpp  vectors.json
lib/: CMakeLists.txt  definition.cc  definition.cpp  definition.h  definition.hh  generate.cc  generate.cpp  generate.h  generate.hh  internal_sample.cc  internal_sample.hh  render.cc  render.cpp  render.h  render.hh  sample.cc  transform.cpp  transform.h
lib/definitions/: CMakeLists.txt  definitions.json  valuetypes.cpp  valuetypes.h
lib/include/: sample.hh
lib/templates/: CMakeLists.txt  comparison_declarations.cpp.inja  comparison_definitions.cpp.inja  equality_declarations.cpp.inja  equality_definitions.cpp.inja  generate_template.cmake  hash_declarations.cpp.inja  hash_definitions.cpp.inja  header.cc  header.cpp  header.cpp.inja  iostream_declarations.cpp.inja  iostream_definitions.cpp.inja  minijson_declarations.cpp.inja  minijson_definitions.cpp.inja  source.cc  source.cpp  source.cpp.inja  swap_declarations.cpp.inja  swap_definitions.cpp.inja  template.cpp.in  templates.cpp  templates.h  templates.hh
test/: CMakeLists.txt  basic_types.cpp  benchmarks.cpp  minijson.cpp  minijson.cpp.in  optionals.cpp  optionals.json  placeholder.cc  point.cpp  point.json  samples.cc  scratchpad.cpp  scratchpad.json  structs.cpp  variants.cpp  vectors.cpp
test/scratchpad/: valuetypes.cpp  valuetypes.h
